Removed test image and unnecessary css files

--- a/css/main_content.css
+++ b/css/main_content.css
@@ -1,8 +1,8 @@
-#main-content {
+main {
   margin-left: 15%;
 }
 
-#page-header {
+header {
   margin: auto;
   margin-top: 3%;
   text-align: center;
