Changed file configuration in css folder. Changed objects: `div.main-content`->`section`. Added test rows to tables

--- a/css/action_panel.css
+++ b/css/action_panel.css
@@ -1,6 +1,6 @@
 .action-panel {
   width: 100%;
-  padding: 16px 4px 16px;
+  padding: 0.5em;
   display: flex;
   flex-direction: row;
   align-items: center;
