--- a/css/main_content.css
+++ b/css/main_content.css
@@ -41,3 +41,33 @@ section {
     width: 100%;
   }
 }
+
+.collapsing-horizontal-flex {
+  display: flex;
+  flex-direction: row;
+}
+
+@media screen and (max-width: 400px){
+  .collapsing-horizontal-flex{
+    flex-direction: column;
+  }
+}
+
+.vertical-flex {
+  display: flex;
+  flex-direction: column;
+}
+
+.spreaded {
+  justify-content: space-evenly;
+}
+
+.full-wide {
+  width: 100%;
+}
+
+@media screen and (max-width: 400px){
+  .collapse-mid-align {
+    align-items: center;
+  }
+}
