--- a/css/storage.css
+++ b/css/storage.css
@@ -1,8 +1,10 @@
 .storage-item {
 	display: flex;
 	flex-direction: row;
-	justify-content: space-evenly;
+	justify-content: space-between;
 	align-items: center;
+	width: 80%;
+	margin: 1em 0;
 }
 
 .item-header {
@@ -12,7 +14,14 @@
 .item-column {
 	display: flex;
 	flex-direction: column;
+	align-items: center;
 	width: 40%;
 	margin: 0 5%;
 }
 
+@media screen and (max-width: 500px) {
+	.item-column {
+		width: 100%;
+		margin: 0;
+	}	
+}
