Changed return link in 404 page. Removed redundant classes in css files. Changed tables structure.

--- a/css/action_panel.css
+++ b/css/action_panel.css
@@ -10,7 +10,7 @@
 @media screen and (max-width: 500px) {
   .action-panel{
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
   }
 }
 
