--- a/css/table.css
+++ b/css/table.css
@@ -20,7 +20,7 @@ td:last-child, th:last-child {
   text-align: center;
 }
 
-tr:nth-child(even) {
+tr:nth-child(odd) {
   background-color: lightgrey;
 }
 
