--- a/css/main_content.css
+++ b/css/main_content.css
@@ -4,20 +4,19 @@
 @import "topbar.css";
 @import "table.css";
 @import "storage.css";
+@import "aside_messages.css";
 
 main {
   margin-left: 15%;
 }
 
 header {
-  margin: auto;
-  margin-top: 3%;
+  margin: 3% auto;
   text-align: center;
 }
 
 section {
-  margin: auto;
-  margin-top: 2%;
+  margin: 2% auto;
   text-align: center;
   width: 90%;
   border: 2px solid black;
@@ -47,7 +46,7 @@ section {
   flex-direction: row;
 }
 
-@media screen and (max-width: 400px){
+@media screen and (max-width: 640px){
   .collapsing-horizontal-flex{
     flex-direction: column;
   }
