--- a/css/table.css
+++ b/css/table.css
@@ -3,29 +3,33 @@ table {
 }
 
 tr {
-  max-width: 100%;
   overflow-x: scroll;
 }
 
 table, th, td {
-  border: 4px solid black;
+  border: 3px solid black;
   border-collapse: collapse;
 }
-
 th, td {
   text-align: left;
 }
+
+td {
+  border-bottom: 1px solid black;
+  border-top: none;
+}
+
 
 td:last-child, th:last-child {
   text-align: center;
 }
 
 tr:nth-child(odd) {
-  background-color: lightgrey;
+  background-color: #e2e2e2;
 }
 
 th {
-  background-color:lightslategrey ;
+  background-color: #a2a8b1;
 }
 
 td > button {
